--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@
                             <div class="col-12 col-md-4">
                                 <input type="email" name="email" placeholder="EMAIL HERE" required>
                             </div>
-                            <input type="hidden" name="_next" value="thankyou.html">
+                            <input type="hidden" name="_next" value="https://kcmanoj.netlify.app/thankyou.html">
                             <div class="col-12 col-md-4">
                                 <input type="text" name="_subject" placeholder="YOUR SUBJECT">
                             </div>
